fix header spacing; better mobile

--- a/src/assets/css/components/episode-supporter.scss
+++ b/src/assets/css/components/episode-supporter.scss
@@ -1,6 +1,6 @@
 .episode-supporter {
   position: sticky;
-  top: calc(#{$spacing-border} + #{$spacing-4});
+  top: calc(#{$spacing-border} + #{$spacing-2});
   margin-top: $spacing-4;
 
   &:first-child {
