--- a/src/assets/css/components/header.scss
+++ b/src/assets/css/components/header.scss
@@ -4,12 +4,12 @@ header {
   top: $spacing-border;
   left: 0;
   width: 100%;
-  // padding: $spacing-body-y $spacing-body-x $spacing-3;
-  padding: $spacing-3 $spacing-body-x;
+  padding: $spacing-6 $spacing-body-x $spacing-3;
   transition: margin $timing $easing;
   z-index: 999;
 
   @media (max-width: $sm) {
+    top: 0 !important;
     padding: $spacing-2 $spacing-4;
   }
 
@@ -101,14 +101,22 @@ header {
 
 //headroom plugin
 .headroom {
-  transition: transform $timing * 2 $easing;
+  transition: transform $timing * 2 $easing, top $timing * 2 $easing;
   will-change: transform;
 
   &--pinned {
     transform: translateY(0);
   }
 
+  &--top {
+    top: $spacing-border;
+  }
+
+  &--not-top {
+    top: calc(#{$spacing-border} - #{$spacing-3});
+  }
+
   &--unpinned {
-    transform: translateY(-102%);
+    transform: translateY(calc(-102% - #{$spacing-4}));
   }
 }
